--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
-  background-color: #292929; /* Color de fondo oscuro */
-  color: #FFFFFF; /* Color de texto blanco */
+  background-color: #292929; 
+  color: #FFFFFF; 
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 20px;
@@ -8,7 +8,7 @@ body {
 
 h1 {
   text-align: center;
-  font-size: 32px; /* Tamaño de fuente más grande */
+  font-size: 32px; 
   margin-top: 0;
 }
 
@@ -23,7 +23,7 @@ form {
 
 input[type="text"] {
   padding: 10px;
-  width: 400px; /* Anchura de la barra de entrada de texto */
+  width: 400px;
 }
 
 button {
