--- a/Templates/index.html
+++ b/Templates/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>To-Do List</title>
-  <link rel="stylesheet" type="text/css" href="C:\FLASK TO DO\Static\styles.css">
+  <title>TO DO LIST</title>
+  <link rel="stylesheet"  href="static/styles.css">
+  <style>
+    .delete-button {
+      margin-left: 10px;
+      cursor: pointer;
+    }
+  </style>
 </head>
 <body>
   <div id="todo-container">
-    <h1>TO DO LIST </h1>
+    <h1>TO DO LIST</h1>
     <form action="/" method="POST">
       <input type="text" name="task" placeholder="Agregar tarea" required>
       <button type="submit">Agregar</button>
@@ -16,11 +22,23 @@
       <li class="task-item">
         <input type="checkbox" class="task-checkbox">
         <span>{{ task }}</span>
+        <button class="delete-button">X</button>
       </li>
       {% endfor %}
     </ul>
   </div>
 
-  
+  <script>
+    
+    var deleteButtons = document.getElementsByClassName('delete-button');
+    
+    for (var i = 0; i < deleteButtons.length; i++) {
+      deleteButtons[i].addEventListener('click', function() {
+        // Eliminar el elemento del DOM
+        this.parentNode.remove();
+      });
+    }
+  </script>
 </body>
 </html>
+
