--- a/Static/styles.css
+++ b/Static/styles.css
@@ -1,52 +1,57 @@
+
 body {
-  background-color: #292929; /* Color de fondo oscuro */
-  color: #FFFFFF; /* Color de texto blanco */
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 20px;
-}
+    background-color: #ddc5ae; 
+    color: #000000;
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 20px;
+  }
+  
+  h1 {
+    text-align: center;
+    font-size: 45px; 
+    margin-top: 0;
+  }
+  
+  #todo-container {
+    margin-top: 20px;
+  }
+  
+  form {
+    display: flex;
+    align-items: center;
+    color: #300a0a;
+  }
+  
+  input[type="text"] {
+    padding: 18px;
+    width: 480px; 
+  }
+  
+  button {
+    padding: 5px 10px;
+  }
+  
+  ul {
+    list-style-type: none;
+    padding: 0;
+  }
+  
+  
+  li.task-item {
+    margin-bottom: 10px;
+    display: flex;
+    align-items: center;
+  }
+  
+  .task-checkbox {
+    margin-right: 10px;
+  }
+  
+  li.completed {
+    text-decoration: line-through;
+    opacity: 0.7;
+  }
 
-h1 {
-  text-align: center;
-  font-size: 32px; /* Tamaño de fuente más grande */
-  margin-top: 0;
-}
 
-#todo-container {
-  margin-top: 20px;
-}
-
-form {
-  display: flex;
-  align-items: center;
-}
-
-input[type="text"] {
-  padding: 10px;
-  width: 400px; /* Anchura de la barra de entrada de texto */
-}
-
-button {
-  padding: 5px 10px;
-}
-
-ul {
-  list-style-type: none;
-  padding: 0;
-}
-
-
-li.task-item {
-  margin-bottom: 10px;
-  display: flex;
-  align-items: center;
-}
-
-.task-checkbox {
-  margin-right: 10px;
-}
-
-li.completed {
-  text-decoration: line-through;
-  opacity: 0.7;
-}
+  
